@@ -1,3 +1,12 @@
 2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>
 
  * Initialized repository, created server.py and README.
+
+2014-01-14 Taylor Jones
+ * Updated server.py to print "This is jonest31's Web server!"
+
+2014-01-23  Taylor Jones
+
+ * Branched test file and added test functions for each case
+ * Divided code into functions and added features to functions
+ * Handled POST and GET requests
